--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
       gesture-detector
       id="scene"
     >
+    <!-- src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb" -->
       <a-assets>
         <a-asset-item
           id="bowser"
-          src="https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb"
+          src="resources/2d.glb"
         >
         </a-asset-item>
       </a-assets>
