--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a-assets>
         <a-asset-item
           id="bowser"
-          src="resources/2d.glb"
+          src="resources/fighter-jet.glb"
         >
         </a-asset-item>
       </a-assets>
