--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <a-scene arjs embedded renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector
     id="scene">
     <a-assets>
-      <a-asset-item id="drone" src="resources/drone/scene.gltf">
+      <a-asset-item id="drone" src="https://arresource.blob.core.windows.net/arresources/resources/drone/scene.gltf">
       </a-asset-item>
       <!-- 
       <a-asset-item id="girl" src="resources/elf_girl/scene.gltf">
       </a-asset-item>
     -->
-      <a-asset-item id="city" src="resources/city/scene.gltf">
+      <a-asset-item id="city" src="https://arresource.blob.core.windows.net/arresources/resources/city/scene.gltf">
       </a-asset-item>
     </a-assets>
 
