--- a/index.html
+++ b/index.html
@@ -21,24 +21,38 @@
     <a-assets>
       <a-asset-item id="drone" src="https://arresource.blob.core.windows.net/arresources/resources/drone/scene.gltf">
       </a-asset-item>
-      <!-- 
-      <a-asset-item id="girl" src="resources/elf_girl/scene.gltf">
+
+      <a-asset-item id="2d" src="resources/2d.glb">
       </a-asset-item>
-    -->
+
       <a-asset-item id="city" src="https://arresource.blob.core.windows.net/arresources/resources/city/scene.gltf">
       </a-asset-item>
     </a-assets>
 
     <a-marker preset="hiro" id="markerA" raycaster="objects: .clickable" emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;">
-      <a-entity id="jet-model" gltf-model="#drone" position="-0.5 -0.5 0" scale="0.01 0.01 0.01"
+      <a-entity id="jet-model" gltf-model="#drone" position="0 0 0" scale="0.05 0.05 0.05"
         animation-mixer="clip: *; loop: repeat" class="clickable" gesture-handler>
       </a-entity>
     </a-marker>
 
     <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
-      <a-entity id="bowser-model" gltf-model="#city" position="0 0 0" scale="0.001 0.001 0.001" class="clickable"
+      <a-entity id="bowser-model" gltf-model="#city" position="0 0 0" scale="0.002 0.002 0.002" class="clickable"
+        gesture-handler>
+      </a-entity>
+    </a-marker>
+
+    <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
+      id="markerA">
+      <a-entity id="bowser-model" gltf-model="#city" position="0 0 0" scale="0.002 0.002 0.002" class="clickable"
+        gesture-handler>
+      </a-entity>
+    </a-marker>
+
+    <a-marker preset="custom" type="pattern" url="markers/letterA.patt" raycaster="objects: .clickable"
+      emitevents="true" cursor="fuse: false; rayOrigin: mouse;" id="marker2D">
+      <a-entity id="bowser-model" gltf-model="#2d" position="0 0 0" scale="0.05 0.05 0.05" class="clickable"
         gesture-handler>
       </a-entity>
     </a-marker>
