--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <a-scene arjs embedded renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector
     id="scene">
     <a-assets>
-      <a-asset-item id="drone" src="https://arresource.blob.core.windows.net/arresources/resources/drone/scene.gltf">
+      <!-- <a-asset-item id="drone" src="https://arresource.blob.core.windows.net/arresources/resources/drone/scene.gltf">
       </a-asset-item>
 
       <a-asset-item id="2d" src="resources/2d.glb">
-      </a-asset-item>
+      </a-asset-item> -->
 
       <a-asset-item id="city" src="https://arresource.blob.core.windows.net/arresources/resources/city/scene.gltf">
       </a-asset-item>
@@ -45,7 +45,15 @@
 
     <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
-      <a-entity id="bowser-model" gltf-model="#city" position="0 0 0" scale="0.002 0.002 0.002" class="clickable"
+      <!-- <a-entity light="type: ambient; intensity: 3;"></a-entity>
+      <a-entity light="type: ambient; intensity: 3;"></a-entity>
+      -->
+      <a-entity  position="70 100 0"  light="type: directional;
+      castShadow: true;
+      intensity: 5;
+      shadowCameraVisible: true;"></a-entity> 
+      <!-- <a-entity light="type: ambient; intensity: 3;"></a-entity> -->
+      <a-entity light="type: ambient; intensity: 2;" id="bowser-model" gltf-model="#city" position="1 1 0" scale="0.001 0.001 0.001" class="clickable"
         gesture-handler>
       </a-entity>
     </a-marker>
