--- a/index.html
+++ b/index.html
@@ -20,48 +20,57 @@
     id="scene">
     <a-assets>
       <!-- <a-asset-item id="drone" src="https://arresource.blob.core.windows.net/arresources/resources/drone/scene.gltf">
-      </a-asset-item>
+      </a-asset-item> -->
 
       <a-asset-item id="2d" src="resources/2d.glb">
-      </a-asset-item> -->
+      </a-asset-item>
 
       <a-asset-item id="city" src="https://arresource.blob.core.windows.net/arresources/resources/city/scene.gltf">
       </a-asset-item>
     </a-assets>
 
-    <a-marker preset="hiro" id="markerA" raycaster="objects: .clickable" emitevents="true"
+    <!-- <a-marker preset="hiro" id="markerA" raycaster="objects: .clickable" emitevents="true"
       cursor="fuse: false; rayOrigin: mouse;">
-      <a-entity id="jet-model" gltf-model="#drone" position="0 0 0" scale="0.05 0.05 0.05"
-        animation-mixer="clip: *; loop: repeat" class="clickable" gesture-handler>
-      </a-entity>
-    </a-marker>
+      <a-entity light="type: hemisphere; intensity: 0.6"></a-entity>
+      <a-entity position="70 100 0" light="type: directional; 
+      castShadow: true;
+      intensity: 5;
+      shadowCameraVisible: true;"></a-entity>
 
-    <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
+      <a-entity id="jet-model" gltf-model="#drone" position="0 0 0" scale="0.05 0.05 0.05"
+        light="type: ambient; intensity: 0.5;" animation-mixer="clip: *; loop: repeat" class="clickable"
+        gesture-handler>
+      </a-entity>
+    </a-marker> -->
+
+    <!-- <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
       <a-entity id="bowser-model" gltf-model="#city" position="0 0 0" scale="0.002 0.002 0.002" class="clickable"
         gesture-handler>
       </a-entity>
-    </a-marker>
+    </a-marker> -->
 
     <a-marker preset="kanji" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;"
       id="markerA">
-      <!-- <a-entity light="type: ambient; intensity: 3;"></a-entity>
-      <a-entity light="type: ambient; intensity: 3;"></a-entity>
-      -->
-      <a-entity  position="70 100 0"  light="type: directional;
+
+      <!-- <a-entity light="type: hemisphere; intensity: 0.6"></a-entity> -->
+      <a-entity position="70 100 0" light="type: directional; 
       castShadow: true;
-      intensity: 5;
-      shadowCameraVisible: true;"></a-entity> 
-      <!-- <a-entity light="type: ambient; intensity: 3;"></a-entity> -->
-      <a-entity light="type: ambient; intensity: 1.5;" id="bowser-model" gltf-model="#city" position="1 1 0" scale="0.001 0.001 0.001" class="clickable"
-        gesture-handler>
+      intensity: 3;
+      shadowCameraVisible: true;"></a-entity>
+      <a-entity light="type: ambient; intensity: 1;" id="bowser-model" gltf-model="#city" position="0 0 0"
+        scale="0.001 0.001 0.001" class="clickable" gesture-handler>
       </a-entity>
     </a-marker>
 
     <a-marker preset="custom" type="pattern" url="markers/letterA.patt" raycaster="objects: .clickable"
       emitevents="true" cursor="fuse: false; rayOrigin: mouse;" id="marker2D">
-      <a-entity id="bowser-model" gltf-model="#2d" position="0 0 0" scale="0.05 0.05 0.05" class="clickable"
-        gesture-handler>
+      <a-entity position="50 50 0" light="type: directional; 
+      castShadow: true;
+      intensity: 3;
+      shadowCameraVisible: true;"></a-entity>
+      <a-entity light="type: ambient; intensity: 0.5;" id="bowser-model" gltf-model="#2d" position="0 0 0"
+        scale="0.2 0.2 0.2" class="clickable">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
