--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Gesture Interactions - A-Frame & AR.js</title>
+  <title>Ansarada M&L Demo - A-Frame & AR.js</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="styles.css">
