--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         cursor='rayOrigin: mouse' 
         scale="0.5 0.5 0.5" id='animated-model'
         animation-mixer="clip: *; loop: repeat; timeScale: 1" 
+        position="-1 -1 -1"
         gltf-model='#flyer'>
       </a-entity>
       <a-entity 
